Had to tinker with margin-rights and lefts to prevent the font-awesome icons from pushing eachother around after clicking and gifs appear -changed the character-counter color to white for better visibility

--- a/public/style.css
+++ b/public/style.css
@@ -102,7 +102,7 @@ thead {
 
 td, th {
     font-family: Big John;
-    width: 85%;
+    width: 100%;
     border: 1px solid #dddddd;
     padding: 8px;
     align-items: center;
@@ -110,30 +110,34 @@ td, th {
     text-align: center;
 }
 
+th {
+    font-size:1.5em;
+}
+
 .hidden {
     display: none;
 }
 
-.editBtn {
+.editBtn, .deleteBtn, .cancelBtn {
     font-size: 1.5em;
-    padding-right: 0.5em;
+    margin: 0.25em;
     cursor: pointer;
 }
 
-.cancelBtn {
-    cursor: pointer;
+.editBtnGif {
     font-size: 1.5em;
-    padding-right: 0.5em;
-}
-
-.deleteBtn {
-    cursor: pointer;
-    font-size: 1.5em;
-    padding-right:0.5em;
+    margin-left: 0.25em;
+    margin-right: 0.37em;
 }
 
 .deleteBtnGif {
     font-size: 1.5em;
+    margin-left:0.25em;
+    margin-right: 0.10em;
+}
+
+.cancelBtn {
+    margin-right: 0.37em;
 }
 
 .addMovie {
@@ -160,6 +164,7 @@ td, th {
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-bottom: 7em;
 }
 
 .inputField{
@@ -176,7 +181,6 @@ td, th {
 
 #movieTitleInputLabel {
     display: block;
-    text-align: center;
     margin: 0 auto;
     font-size: 1.5em;
     color: #ffffff;
@@ -193,6 +197,10 @@ input[type=text] {
     font-size:50px;
     padding: 5px;
     margin: 0px 0;
+}
+
+.character-counter {
+    color:white;
 }
 
 #labelStarRating {
@@ -299,15 +307,6 @@ input[type=text] {
     color: red;
     margin-left: 10px;
 }
-
-
-
-
-
-
-
-
-
 
 
 /*
